--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
       </svg>
 </body>
   <audio autoplay> 
-    <source src="am-thanh-ngan.mp3" type="audio/mpeg">
+    <source src="./luatrinhduyet.mp3" type="audio/mpeg">
   </audio>
   <audio id="myAudio" loop hidden>
     <source src="./nhac.mp3" type="audio/mpeg">
