--- a/index.html
+++ b/index.html
@@ -445,6 +445,9 @@
     document.querySelector('audio').addEventListener('ended', function() {
       document.getElementById('myAudio').play();
     });
-  </script>  
+  </script>
+      <!-- partial -->
+  <script  src="./script.js"></script>
+      
 </body>
 </html>
