--- a/index.html
+++ b/index.html
@@ -5,7 +5,70 @@
   <title>Web này chỉ có hoa</title>
    <link rel="icon" type="image/x-icon" href="./flower_346218.png">
   <link rel="stylesheet" href="./style.css">
+<head>
+  <style>
+    #countdown {
+      font-size: 18px;
+      text-align: center;
+      display: none; 
+    }
 
+    #playButton { 
+      display: none; 
+    }
+
+    #startButton {
+      display: block;
+      font-size: 14px;
+      padding: 7px 16px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+
+  <div id="countdown">2</div>
+  <audio id="myAudio" src="./nhac.mp3"></audio>
+  <button id="playButton">Play Music</button>
+
+  <button id="startButton">nhạc ở đêy nè con</button>
+
+  <script>
+    var count = 1;
+    var countdown; // Khai báo biến countdown ở phạm vi toàn cục
+
+    // Hàm bắt đầu đếm ngược và tự động phát nhạc
+    function startExperience() {
+      countdown = setInterval(function() {
+        document.getElementById("countdown").innerHTML = count;
+        count--;
+        if (count < 0) {
+          clearInterval(countdown);
+          document.getElementById("countdown").innerHTML = "Play!";
+
+          // Thử giả lập sự kiện click
+          var playButton = document.getElementById("playButton");
+          playButton.dispatchEvent(new Event('click')); 
+
+          // Phát nhạc (nếu trình duyệt cho phép)
+          var audio = document.getElementById("myAudio");
+          audio.play(); 
+        }
+      }, 1000);
+    }
+
+    // Gắn sự kiện click vào nút "Bắt đầu trải nghiệm"
+    document.getElementById("startButton").addEventListener("click", function() {
+      this.style.display = 'none'; // Ẩn nút sau khi click
+      startExperience(); // Bắt đầu đếm ngược và phát nhạc
+    });
+
+    // Xử lý sự kiện click cho nút play (ẩn)
+    document.getElementById("playButton").addEventListener("click", function() {
+      var audio = document.getElementById("myAudio");
+      audio.play();
+    });
+  </script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -434,69 +497,7 @@
         <path d="M23.6 2c-3.363 0-6.258 2.736-7.599 5.594-1.342-2.858-4.237-5.594-7.601-5.594-4.637 0-8.4 3.764-8.4 8.401 0 9.433 9.516 11.906 16.001 21.232 6.13-9.268 15.999-12.1 15.999-21.232 0-4.637-3.763-8.401-8.4-8.401z"></path>
       </svg>
 </body>
-  <style>
-    #countdown {
-      font-size: 18px;
-      text-align: center;
-      display: none; 
-    }
-
-    #playButton { 
-      display: none; 
-    }
-
-    #startButton {
-      display: block;
-      font-size: 14px;
-      padding: 7px 16px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-
-  <div id="countdown">2</div>
-  <audio id="myAudio" src="./nhac.mp3"></audio>
-  <button id="playButton">Play Music</button>
-
-  <button id="startButton">nhạc ở đêy nè con</button>
-
-  <script>
-    var count = 1;
-    var countdown; // Khai báo biến countdown ở phạm vi toàn cục
-
-    // Hàm bắt đầu đếm ngược và tự động phát nhạc
-    function startExperience() {
-      countdown = setInterval(function() {
-        document.getElementById("countdown").innerHTML = count;
-        count--;
-        if (count < 0) {
-          clearInterval(countdown);
-          document.getElementById("countdown").innerHTML = "Play!";
-
-          // Thử giả lập sự kiện click
-          var playButton = document.getElementById("playButton");
-          playButton.dispatchEvent(new Event('click')); 
-
-          // Phát nhạc (nếu trình duyệt cho phép)
-          var audio = document.getElementById("myAudio");
-          audio.play(); 
-        }
-      }, 1000);
-    }
-
-    // Gắn sự kiện click vào nút "Bắt đầu trải nghiệm"
-    document.getElementById("startButton").addEventListener("click", function() {
-      this.style.display = 'none'; // Ẩn nút sau khi click
-      startExperience(); // Bắt đầu đếm ngược và phát nhạc
-    });
-
-    // Xử lý sự kiện click cho nút play (ẩn)
-    document.getElementById("playButton").addEventListener("click", function() {
-      var audio = document.getElementById("myAudio");
-      audio.play();
-    });
-  </script>
+  
 <!-- partial -->
   <script  src="./script.js"></script>
 
